; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_util.c_touch.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_util.c_touch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.message = type { i32 }

@MTOUCH = common dso_local global i32 0, align 4
@MREAD = common dso_local global i32 0, align 4
@MSTATUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @touch(%struct.message* %0) #0 {
  %2 = alloca %struct.message*, align 8
  store %struct.message* %0, %struct.message** %2, align 8
  %3 = load i32, i32* @MTOUCH, align 4
  %4 = load %struct.message*, %struct.message** %2, align 8
  %5 = getelementptr inbounds %struct.message, %struct.message* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = or i32 %6, %3
  store i32 %7, i32* %5, align 4
  %8 = load %struct.message*, %struct.message** %2, align 8
  %9 = getelementptr inbounds %struct.message, %struct.message* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @MREAD, align 4
  %12 = and i32 %10, %11
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %1
  %15 = load i32, i32* @MREAD, align 4
  %16 = load i32, i32* @MSTATUS, align 4
  %17 = or i32 %15, %16
  %18 = load %struct.message*, %struct.message** %2, align 8
  %19 = getelementptr inbounds %struct.message, %struct.message* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = or i32 %20, %17
  store i32 %21, i32* %19, align 4
  br label %22

22:                                               ; preds = %14, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
